// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clyx Mason & Fifth retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://clyx.com/feed/coffeehouse-cinema-london",
        "format": {},
        "notes": "Presented by Coffeehouse Cinema",
        "status": {
          "soldOut": false,
        },
        "time": 1790184600000,
      },
    ],
    "showingId": "clyx.com-28338155-c33c-455d-af10-adfd5a68cd9d",
    "title": "Coffeehouse Cinema London",
    "url": "https://clyx.com/feed/coffeehouse-cinema-london",
  },
]
`;

exports[`Clyx The Woodfield Pavilion retrieve and find events 1`] = `[]`;

exports[`Clyx Vue West End retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 27000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://clyx.com/feed/september-film-club-2-resident-evil",
        "format": {},
        "notes": "Presented by Filmfluencing",
        "status": {
          "soldOut": false,
        },
        "time": 1789826400000,
      },
    ],
    "showingId": "clyx.com-f2963417-dc91-49fe-bf48-3dfefb29a21d",
    "title": "September Film Club 2 - Resident Evil",
    "url": "https://clyx.com/feed/september-film-club-2-resident-evil",
  },
]
`;
